--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha index.test.js",
+    "test": "mocha -b index.test.js",
     "test:watch": "mocha -w index.test.js"
   },
   "keywords": [],
