--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "mocha": "^5.1.1"
+  "dependencies": {},
+  "devDependencies": {
+    "mocha": "^5.1.1",
+    "onchange": "^3.3.0"
   }
 }
