--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -b index.test.js",
-    "test:watch": "mocha -w index.test.js"
+    "test:watch": "onchange \"./*.js\" -- npm test"
   },
   "keywords": [],
   "author": "",
